--- a/oncelib/build.gradle
+++ b/oncelib/build.gradle
@@ -1,12 +1,20 @@
 apply plugin: 'com.android.library'
 
+apply plugin: 'kotlin-android'
+
+apply plugin: 'kotlin-android-extensions'
+
+apply plugin: 'com.github.dcendents.android-maven'
+
+group='com.github.mundia416'
+
 android {
     compileSdkVersion 28
 
 
 
     defaultConfig {
-        minSdkVersion 9
+        minSdkVersion 14
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -30,5 +38,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.github.mundia416:storage:0.0.3'
+    implementation 'com.github.mundia416:storage:0.1.3'
 }
